<resources>
    <string name="app_name">Mascotas</string>
    <string name="menuFavoritos">Favoritos</string>
    <string name="menuOpciones">Settings</string>
    <string name="nombreFormulario">Nombre</string>
    <string name="mailFormulario">Mail</string>
    <string name="mensajeFormulario">Mensaje</string>
    <string name="textoBotonFormulario">Enviar comentario</string>
    <string name="menuContacto">Contacto</string>
    <string name="menuAcercaDe">Acerca de</string>
    <string name="biografiaDesarrollador">Aqui estará la biografia del desarrollador</string>
    <string name="modelo_de_la_BBDD">Aqui se muestra el modelo de la BBDD</string>
    <string name="menuModeloBBDD">Modelo BBDD</string>
    <string name="menuConfigurarCuenta">Configurar Cuenta</string>
    <string name="hintLogin">Escribe tu usuario</string>
    <string name="textoBotonLogin">Guardar Cuenta</string>
    <string name="RecibirNotificaciones">Notificaciones</string>
    <string name="accion_01_wear">Ver mi perfil</string>
    <string name="accion_02_wear">Dar Like</string>
    <string name="accion_03_wear">Ver usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
