<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:orientation="vertical">

    <!-- Con este codigo se incluye el actionbar desde el layout actionbar2xml-->
    <include android:id="@+id/miActionBar2"
        layout="@layout/actionbar2"></include>
    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/etLoginNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintLogin"/>

    </android.support.design.widget.TextInputLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/btnBotonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoBotonLogin"
            android:theme="@style/TemaBotones" />
    </LinearLayout>


</LinearLayout>